feat: send boost map

--- a/template/qqx5/duo-boost-map.html
+++ b/template/qqx5/duo-boost-map.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Burst Meter</title>
     <link rel="stylesheet" href="../assets/css/application.css">
-    <link rel="stylesheet" href="duo-burst-table.css">
+    <link rel="stylesheet" href="duo-boost-map.css">
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/react.production.min.js"></script>
     <script src="../assets/js/react-dom.production.min.js"></script>
@@ -120,9 +120,9 @@
         }
     }
 
-    // const initDom = (data) => {
+    const initDom = (data) => {
         const root = ReactDOM.createRoot(document.querySelector("#root"));
         root.render(<Component data={data} />);
-    // };
+    };
 </script>
 </html>
