--- a/template/qqx5/duo-idol-boost-map.html
+++ b/template/qqx5/duo-idol-boost-map.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Burst Meter</title>
+    <title>Duo Idol Boost Map</title>
     <link rel="stylesheet" href="../assets/css/application.css">
-    <link rel="stylesheet" href="duo-boost-map.css">
+    <link rel="stylesheet" href="duo-idol-boost-map.css">
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/react.production.min.js"></script>
     <script src="../assets/js/react-dom.production.min.js"></script>
