--- a/template/qqx5/duo-idol-boost-map.css
+++ b/template/qqx5/duo-idol-boost-map.css
@@ -1,5 +1,5 @@
 .main {
-    background-image: url("../assets/img/background.png");
+    background-image: url("../assets/img/background-1.jpg");
     background-size: cover;
     border-radius: 3%;
     border: white solid 1px;
