--- a/template/qqx5/boost-map.css
+++ b/template/qqx5/boost-map.css
@@ -1,5 +1,5 @@
 .main {
-    background-image: url("../assets/img/background-2.jpg");
+    background-image: url("../assets/img/background.jpg");
     background-size: cover;
     border-radius: 3%;
     border: white solid 1px;
